--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         </button>
     </mat-form-field><br>
     <button id="forgot_pass" mat-button color="primary">Forgot Password?</button><br><br><br>
-    <button id="signup" mat-stroked-button color="primary">Create Account</button>
+    <button (click)="openSignUp()" id="signup" mat-stroked-button color="primary">Create Account</button>
     <button id="login" mat-flat-button color="primary">Log In</button>
 </div>
   
