--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div>
+    <p id="label">Welcome</p><br>
     <mat-form-field class="login" appearance="outline">
       <mat-label>Email or Phone</mat-label>
       <input matInput>
