--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -19,7 +19,7 @@
                     <mat-label>Date of Birth</mat-label>
                     <input matInput [matDatepicker]="picker" required>
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
+                    <mat-datepicker touchUi #picker></mat-datepicker>
                 </mat-form-field><br>
                 <button (click)="openLogin()" id="signup" mat-stroked-button color="primary">Login</button>
                 <button id="login" mat-flat-button color="primary" matStepperNext>Next</button>
